--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.10.2",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "fs": "0.0.1-security",
-    "mongoose": "^6.5.2",
+    "mongoose": "^6.5.3",
     "next": "12.2.5",
     "path": "^0.12.7",
     "react": "18.2.0",
