--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs": "0.0.1-security",
     "mongoose": "^6.5.3",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
