--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.2",
+    "animate.css": "^4.1.1",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "fs": "0.0.1-security",
@@ -21,6 +23,8 @@
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.3",
+    "styled-components": "^5.3.5",
     "swiper": "^8.3.2",
     "swr": "^1.3.0"
   },
