--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.2",
     "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "fs": "0.0.1-security",
