--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "path": "^0.12.7",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loader-spinner": "^5.3.3",
