--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aos": "^3.0.0-beta.6",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^7.3.2",
     "fs": "0.0.1-security",
     "mongoose": "^6.5.3",
     "next": "12.2.5",
