added content to the team page

--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "framer-motion": "^7.3.2",
     "fs": "0.0.1-security",
     "mongoose": "^6.5.3",
-    "next": "12.2.5",
+    "next": "^12.2.5",
     "next-auth": "^4.10.3",
     "path": "^0.12.7",
     "pro-gallery": "^4.1.46",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.3",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.2",
