--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-gallery": "^1.0.0-alpha.0",
+    "react-images": "^1.2.0-beta.7",
     "react-loader-spinner": "^5.3.3",
+    "react-photo-gallery": "^8.0.0",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.2",
     "swr": "^1.3.0"
